--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,7 @@
 @import "./blocks/header";
 @import "./blocks/pokemons";
 
-* {background-color: "#ffffff";}
+* {background-color: "#f0f0f0";}
 * { font-family: 'Press Start 2P', 'Roboto', 'Times New Roman'}
 
 
