--- a/blocks/_pokemons.scss
+++ b/blocks/_pokemons.scss
@@ -43,7 +43,7 @@
   height: 3vh;
   border: none;
   border-radius: 5vh;
-  color: #ffffff;
+  color: #fdfeff;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: bold;
@@ -56,3 +56,7 @@
 
 .pokemon button { font-size: 12px;
 margin-right: 2px;}
+
+.loadingGif {
+  margin-left: 75vh;
+}
